Added locations.js to list of assets to precompile.

--- a/public/assets/manifest.yml
+++ b/public/assets/manifest.yml
@@ -4,6 +4,7 @@ gcsja_logo_162x180.png: gcsja_logo_162x180-e41c8296761f9707e064480fe82dda20.png
 jquery.min.js: jquery-8a50feed8d29566738ad005e19fe1c2d.min.js
 mestre__jogo.jpg: mestre__jogo-bffbe32838f7abee553efe951efc0379.jpg
 gcsja_shadow.png: gcsja_shadow-7db5cbbc0900c8648b8bab7dcba847de.png
+locations.js: locations-2fbab7ae7c557f8ff48d8f0f9c2cd939.js
 corners.png: corners-e38d7059129965ce21d87ffd6103ac2f.png
 get_video.png: get_video-c98d8102206d807c169b724a8c5a39e6.png
 gcsja_logo_99x110.png: gcsja_logo_99x110-ad002d394537dccd616f63144d769c89.png
