Fixed call to un-compiled css in videos layout.

--- a/public/assets/manifest.yml
+++ b/public/assets/manifest.yml
@@ -12,10 +12,11 @@ jquery-ui.min.js: jquery-ui-7e33882a28fc84ad0e0e47e46cbf901c.min.js
 capoeira_banner.jpg: capoeira_banner-7b568ec2b303ce64d513b1a39ecb58cd.jpg
 habo.png: habo-61abc7292b802a1e56afffec3ada8599.png
 handstand.png: handstand-ff22d3df68d145e423ab4099a5ebfb78.png
-application.css: application-3e891c05beab57cb5855b4d1f301b758.css
+application.css: application-3c17d3fad7ef37495ef49c27886277dc.css
 imposs_accents.ttf: imposs_accents-277ef3bbca3f58d5f87c63eac2e98046.ttf
 br.gif: br-b7c9eca6eb270f0fca947480893e4589.gif
 gb.gif: gb-5ef4240b6eac9847761cbdcd7c07809f.gif
+videos.js: videos-fea0140d1a6f5ef962714226263aedbb.js
 application.js: application-5f627fa0b1169958b3d59ac2aaacd674.js
 gcsja_logo_135x150.png: gcsja_logo_135x150-d7397101565f7916bbbe1437b791185e.png
 fr.png: fr-f78d2041e4cd01380368fb8b1d555d89.png
