--- a/public/assets/manifest.yml
+++ b/public/assets/manifest.yml
@@ -1,22 +1,27 @@
---- 
-gcsja.png: gcsja-2453f7ff04d7585da1114fae546a179d.png
-gcsja_logo_162x180.png: gcsja_logo_162x180-e41c8296761f9707e064480fe82dda20.png
-jquery.min.js: jquery-8a50feed8d29566738ad005e19fe1c2d.min.js
-mestre__jogo.jpg: mestre__jogo-bffbe32838f7abee553efe951efc0379.jpg
-gcsja_shadow.png: gcsja_shadow-7db5cbbc0900c8648b8bab7dcba847de.png
-locations.js: locations-2fbab7ae7c557f8ff48d8f0f9c2cd939.js
-corners.png: corners-e38d7059129965ce21d87ffd6103ac2f.png
-get_video.png: get_video-c98d8102206d807c169b724a8c5a39e6.png
-gcsja_logo_99x110.png: gcsja_logo_99x110-ad002d394537dccd616f63144d769c89.png
-jquery-ui.min.js: jquery-ui-7e33882a28fc84ad0e0e47e46cbf901c.min.js
-capoeira_banner.jpg: capoeira_banner-7b568ec2b303ce64d513b1a39ecb58cd.jpg
-habo.png: habo-61abc7292b802a1e56afffec3ada8599.png
-handstand.png: handstand-ff22d3df68d145e423ab4099a5ebfb78.png
-application.css: application-3c17d3fad7ef37495ef49c27886277dc.css
-imposs_accents.ttf: imposs_accents-277ef3bbca3f58d5f87c63eac2e98046.ttf
-br.gif: br-b7c9eca6eb270f0fca947480893e4589.gif
-gb.gif: gb-5ef4240b6eac9847761cbdcd7c07809f.gif
-videos.js: videos-fea0140d1a6f5ef962714226263aedbb.js
-application.js: application-5f627fa0b1169958b3d59ac2aaacd674.js
-gcsja_logo_135x150.png: gcsja_logo_135x150-d7397101565f7916bbbe1437b791185e.png
-fr.png: fr-f78d2041e4cd01380368fb8b1d555d89.png
+---
+br.gif: br-53590da88a621d52f64c17dabd69b744.gif
+capoeira36.jpg: capoeira36-011cd809528ac9071f580370c71ef9ee.jpg
+capoeira_banner.jpg: capoeira_banner-266cb5cd89e62ae797536b9ed7196eb6.jpg
+chamada.jpg: chamada-2aa18f1d4eae8b13bde62dbcb4edcc8b.jpg
+corners.png: corners-8f52370e0a19bbfa0019194696350362.png
+facebook_32.png: facebook_32-56cd78cb046f8c110edbea8580a52c39.png
+fr.png: fr-adc1b96c9b9076d135fd6083190c3381.png
+gb.gif: gb-45187ad5c8ad584e7d43dbdf37692cd0.gif
+gcsja.png: gcsja-481156ded9ab814ef440b17f9d5652fa.png
+gcsja_logo_135x150.png: gcsja_logo_135x150-d76582d39a42af752fd096c3e8ffecf9.png
+gcsja_logo_162x180.png: gcsja_logo_162x180-1be0fc6897f30416a38f3d8d52bd2511.png
+gcsja_logo_99x110.png: gcsja_logo_99x110-315b8cfc797f48ff6fab03402af56167.png
+gcsja_shadow.png: gcsja_shadow-dc040ad12824a8113eb99bf974e2016e.png
+get_video.png: get_video-8e242d6dc45b04e54769836af5feded6.png
+github_32.png: github_32-5d8085022a283d852fbdf5cd95d0173f.png
+google_32.png: google_32-31dd8ed4ed8218ffb86813de859f1825.png
+habo.png: habo-77000803b88b50e87d0ed8974f120762.png
+handstand.png: handstand-9c48522855073019bfb0465296eeb8d9.png
+mestre__jogo.jpg: mestre__jogo-5a1fb3e635be606c4e23d5daf18a1e0b.jpg
+twitter_32.png: twitter_32-d5ad07c40b2b038c8c99917c720060ed.png
+application.js: application-540ec1434038d21cfe74636b12b64b25.js
+locations.js: locations-50449357df0f7fa8b69f4f04b9ff546c.js
+videos.js: videos-14f8079bc0b3ca185caf8e92036395b0.js
+application.css: application-5aab61030d6d021d4d9d587b069e4b30.css
+imposs_accents.ttf: imposs_accents-4b40b4b6029e1bce2b5ec3bafd71adf8.ttf
+locations.css: locations-1c3be041e45b3fec9a3b9f095c1bbb14.css
